Finish assignment6, 7, 8
