# server.js
@@ -4,6 +4,24 @@ const mongodb = require('./db/connect');
 
 const port = process.env.PORT || 8080;
 const app = express();
+const { auth } = require('express-openid-connect');
+
+const config = {
+  authRequired: false,
+  auth0Logout: true,
+  secret: 'a long, randomly-generated string stored in env',
+  baseURL: 'http://localhost:8080',
+  clientID: '9XAJTlsEWnCgyL8fWPob6vOF1sVgqI0S',
+  issuerBaseURL: 'https://dev-o2t20jrazweh1dgo.us.auth0.com'
+};
+
+// auth router attaches /login, /logout, and /callback routes to the baseURL
+app.use(auth(config));
+
+// req.isAuthenticated is provided from the auth router
+app.get('/', (req, res) => {
+  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
+});
 
 app
   .use(bodyParser.json())
@@ -21,3 +39,18 @@ mongodb.initDb((err) => {
     console.log(`Connected to DB and listening on localhost:${port}`);
   }
 });
+// const db = require('./models');
+// db.mongoose
+//   .connect(db.url, {
+//     useNewUrlParser: true,
+//     useUnifiedTopology: true
+//   })
+//   .then(() => {
+//     app.listen(port, () => {
+//       console.log(`DB Connected and server running on ${port}.`);
+//     });
+//   })
+//   .catch((err) => {
+//     console.log('Cannot connect to the database!', err);
+//     process.exit();
+//   });
